carblue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carblue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carblue
  template:
    metadata:
      labels:
        app: carblue
    spec:
      containers:
      - name: carblue
        image: carblue:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: carblue
spec:
  selector:
    app: carblue
  ports:
    - port: 8081
      targetPort: 8081
