discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - name: discovery
        image: discovery:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8700
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  selector:
    app: discovery
  ports:
    - port: 8700
      targetPort: 8700
