oauth2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2
  template:
    metadata:
      labels:
        app: oauth2
    spec:
      containers:
      - name: oauth2
        image: oauth2:latest
        imagePullPolicy: Never  
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2
spec:
  selector:
    app: oauth2
  ports:
    - port: 8080
      targetPort: 8080
